[package]
name = "zero"
authors = ["Polygon Zero"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
__compat_primitive_types.workspace = true
alloy.workspace = true
alloy-compat = "0.1.0"
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
cfg-if = "1.0.0"
clap = { workspace = true, features = ["derive", "string"] }
compat.workspace = true
directories = "5.0.1"
dotenvy.workspace = true
evm_arithmetization.workspace = true
futures.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
keccak-hash.workspace = true
lru.workspace = true
mpt_trie.workspace = true
num-traits.workspace = true
once_cell.workspace = true
paladin-core.workspace = true
plonky2.workspace = true
plonky2_maybe_rayon.workspace = true
regex = "1.5.4"
rlp.workspace = true
ruint = { workspace = true, features = ["num-traits", "primitive-types"] }
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["retry"] }
trace_decoder.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
zk_evm_common.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[build-dependencies]
anyhow.workspace = true
vergen-git2 = { version = "1.0.0", features = ["build"] }

[dev-dependencies]
mockall = "0.13.0"


[features]
default = ["cdk_erigon"]
eth_mainnet = ["evm_arithmetization/eth_mainnet", "trace_decoder/eth_mainnet"]
cdk_erigon = ["evm_arithmetization/cdk_erigon", "trace_decoder/cdk_erigon"]
polygon_pos = ["evm_arithmetization/polygon_pos", "trace_decoder/polygon_pos"]

[lints]
workspace = true
