[workspace]
members = ["leader", "worker", "common", "ops", "verifier", "rpc", "prover"]
resolver = "2"

[workspace.dependencies]
paladin-core = "0.4.2"
anyhow = { version = "1.0.75", features = ["backtrace"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.183"
serde_path_to_error = "0.1.14"
serde_json = "1.0.107"
thiserror = "1.0.50"
futures = "0.3.29"
keccak-hash = "0.10.0"
alloy = { git = "https://github.com/alloy-rs/alloy", tag='v0.1.1', default-features = false, features = [
    "consensus",
    "reqwest",
    "json-rpc",
    "rlp",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "providers",
    "transports",
    "transport-http",
    "rpc-types-debug"
] }


# zk-evm dependencies
plonky2 = "0.2.2"
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm.git", tag = "v0.4.0" }
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm.git", tag = "v0.4.0" }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm.git", tag = "v0.4.0" }
proof_gen = { git = "https://github.com/0xPolygonZero/zk_evm.git", tag = "v0.4.0" }

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xPolygonZero/zero-bin"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography::cryptocurrencies"]

[profile.release]
opt-level = 3
incremental = true
lto = "fat"
codegen-units = 1
