[package]
name = "zero_bin_common"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
once_cell = { workspace = true }
plonky2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vergen = { workspace = true }

directories = "5.0.1"

# Local dependencies
evm_arithmetization = { workspace = true }
proof_gen = { workspace = true }
trace_decoder = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
vergen = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "evm_arithmetization/eth_mainnet",
    "proof_gen/eth_mainnet",
    "trace_decoder/eth_mainnet",
]
cdk_erigon = [
    "evm_arithmetization/cdk_erigon",
    "proof_gen/cdk_erigon",
    "trace_decoder/cdk_erigon",
]

[lints]
workspace = true
