[package]
name = "coordinator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["BCW Technologies <Stephen@bcw.group>"]
keywords.workspace = true
categories.workspace = true

[dependencies]

# Local dependencies
leader = { workspace = true }
ops = { workspace = true }
prover = { workspace = true }
rpc = { workspace = true }
zero_bin_common = { workspace = true }

# 3rd parties
alloy = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
paladin-core = { workspace = true }
proof_gen = { workspace = true }
google-cloud-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# log = "0.4.21"
actix-web = "4.5.1"
actix-rt = "2.9.0"
# env_logger = "0.11.3"
chrono = { workspace = true }
async-channel = "2.2.1"
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.1"
