[package]
name = "leader"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "../common/build.rs"

[dependencies]
paladin-core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
futures = { workspace = true }
alloy.workspace = true
axum = { workspace = true }
toml = { workspace = true }

# Local dependencies
evm_arithmetization = { workspace = true }
ops = { workspace = true }
proof_gen = { workspace = true }
prover = { workspace = true }
rpc = { workspace = true }
zero_bin_common = { workspace = true }
zk_evm_common = { workspace = true }

[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "evm_arithmetization/eth_mainnet",
    "ops/eth_mainnet",
    "proof_gen/eth_mainnet",
    "prover/eth_mainnet",
    "rpc/eth_mainnet",
    "zero_bin_common/eth_mainnet"
]
cdk_erigon = [
    "evm_arithmetization/cdk_erigon",
    "ops/cdk_erigon",
    "proof_gen/cdk_erigon",
    "prover/cdk_erigon",
    "rpc/cdk_erigon",
    "zero_bin_common/cdk_erigon"
]
polygon_pos = [
    "evm_arithmetization/polygon_pos",
    "ops/polygon_pos",
    "proof_gen/polygon_pos",
    "prover/polygon_pos",
    "rpc/polygon_pos",
    "zero_bin_common/polygon_pos",
]

[build-dependencies]
cargo_metadata = { workspace = true }
vergen = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
