[package]
name = "ops"
version = "0.1.0"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paladin-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
keccak-hash = { workspace = true }

# Local dependencies
# TODO: update deps to take local versions again
proof_gen = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "develop" }
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "develop" }
zero_bin_common = { workspace = true }

[features]
default = []
test_only = []
