[package]
name = "ops"
version = "0.1.0"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
keccak-hash = { workspace = true }
paladin-core = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

# Local dependencies
evm_arithmetization = { workspace = true }
proof_gen = { workspace = true }
zero_bin_common = { workspace = true }
zk_evm_common = { workspace = true }

[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "evm_arithmetization/eth_mainnet",
    "proof_gen/eth_mainnet",
    "zero_bin_common/eth_mainnet",
]
cdk_erigon = [
    "evm_arithmetization/cdk_erigon",
    "proof_gen/cdk_erigon",
    "zero_bin_common/cdk_erigon",
]
polygon_pos = [
    "evm_arithmetization/polygon_pos",
    "proof_gen/polygon_pos",
    "zero_bin_common/polygon_pos",
]
