[package]
name = "prover"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
proof_gen = { workspace = true }
plonky2 = { workspace = true }
trace_decoder = { workspace = true }
tracing = { workspace = true }
paladin-core = { workspace = true }
anyhow = { workspace = true }
evm_arithmetization = { workspace = true }
futures = { workspace = true }
alloy.workspace = true
tokio = {workspace = true}
serde_json = {workspace = true}
ruint = { workspace = true, features = ["num-traits", "primitive-types"] }
ops = { workspace = true }
zero_bin_common ={ workspace = true }
num-traits = { workspace = true }

[features]
default = []
test_only = ["ops/test_only"]
