[package]
name = "prover"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
evm_arithmetization = { workspace = true }
futures = { workspace = true }
num-traits = { workspace = true }
ops = { workspace = true }
paladin-core = { workspace = true }
plonky2 = { workspace = true }
plonky2_maybe_rayon = { workspace = true }
proof_gen = { workspace = true }
ruint = { workspace = true, features = ["num-traits", "primitive-types"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
trace_decoder = { workspace = true }
tracing = { workspace = true }
zero_bin_common = { workspace = true }

[features]
default = []
cdk_erigon = []

[lints]
workspace = true
