[package]
name = "prover"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy.workspace = true
anyhow = { workspace = true }
clap = {workspace = true, features = ["derive", "string"] }
futures = { workspace = true }
num-traits = { workspace = true }
ops = { workspace = true }
paladin-core = { workspace = true }
plonky2 = { workspace = true }
plonky2_maybe_rayon = { workspace = true }
ruint = { workspace = true, features = ["num-traits", "primitive-types"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Local dependencies
evm_arithmetization = { workspace = true }
proof_gen = { workspace = true }
trace_decoder = { workspace = true }
zero_bin_common = { workspace = true }


[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "evm_arithmetization/eth_mainnet",
    "proof_gen/eth_mainnet",
    "trace_decoder/eth_mainnet",
    "zero_bin_common/eth_mainnet",
]
cdk_erigon = [
    "evm_arithmetization/cdk_erigon",
    "proof_gen/cdk_erigon",
    "trace_decoder/cdk_erigon",
    "zero_bin_common/cdk_erigon",
]

[lints]
workspace = true
