[package]
name = "rpc"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
__compat_primitive_types = { workspace = true }
alloy.workspace = true
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["retry"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Local dependencies
compat = { workspace = true }
zero_bin_common = { workspace = true }
prover = { workspace = true }
# TODO: update deps to take local versions again
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "feat/cancun" }
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "feat/cancun" }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "feat/cancun" }
