[package]
name = "rpc"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "../common/build.rs"

[dependencies]
__compat_primitive_types = { workspace = true }
alloy = { workspace = true }
alloy-compat = "0.1.0"
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["retry"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
itertools = { workspace = true }

# Local dependencies
compat = { workspace = true }
evm_arithmetization = { workspace = true }
mpt_trie = { workspace = true }
prover = { workspace = true }
trace_decoder = { workspace = true }
zero_bin_common = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
vergen = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "evm_arithmetization/eth_mainnet",
    "prover/eth_mainnet",
    "trace_decoder/eth_mainnet",
    "zero_bin_common/eth_mainnet",
]
cdk_erigon = [
    "evm_arithmetization/cdk_erigon",
    "prover/cdk_erigon",
    "trace_decoder/cdk_erigon",
    "zero_bin_common/cdk_erigon",
]
