[package]
name = "verifier"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition = "2021"
build = "../common/src/build_version.rs"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
proof_gen = { workspace = true }

# Local dependencies
zero_bin_common = { path = "../common" }

[build-dependencies]
cargo_metadata = { workspace = true }
vergen = { workspace = true }
anyhow = { workspace = true }
