[package]
name = "verifier"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition = "2021"
build = "../common/build.rs"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }

# Local dependencies
proof_gen = { workspace = true }
zero_bin_common = { workspace = true }
zk_evm_common = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
vergen = { workspace = true }
anyhow = { workspace = true }


[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "proof_gen/eth_mainnet",
    "zero_bin_common/eth_mainnet",
]
cdk_erigon = [
    "proof_gen/cdk_erigon",
    "zero_bin_common/cdk_erigon",
]
polygon_pos = [
    "proof_gen/polygon_pos",
    "zero_bin_common/polygon_pos",
]
