[package]
name = "verifier"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition = "2021"
build = "../common/build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local dependencies
proof_gen = { workspace = true }
zero_bin_common = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
vergen = { workspace = true }


[features]
default = ["eth_mainnet"]
eth_mainnet = [
    "proof_gen/eth_mainnet",
    "zero_bin_common/eth_mainnet",
]
cdk_erigon = [
    "proof_gen/cdk_erigon",
    "zero_bin_common/cdk_erigon",
]
