[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
paladin-core = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

# Local dependencies
ops = { path = "../ops" }
