[package]
name = "worker"
authors = ["Polygon Zero <zbrown@polygon.technology>"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paladin-core = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

# Local dependencies
ops = { workspace = true }
zero_bin_common = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
